Fail fast when Redis TLS password is missing